--- a/System_eng_Part4.ipynb
+++ b/System_eng_Part4.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_Part4.ipynb",
-      "authorship_tag": "ABX9TyOl6kcXAfZAcGeT3JO+R2YB",
+      "authorship_tag": "ABX9TyODDH1HT4lpO8ze89TIQTz2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,25 @@
         "pip install cohere"
       ],
       "metadata": {
-        "id": "w74Apoui5vaa"
+        "id": "w74Apoui5vaa",
+        "outputId": "667fda73-7d6f-4381-85f3-88165ede18b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx>=0.21.2->cohere) (1.2.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.35.0,>=1.34.137->boto3<2.0.0,>=1.34.0->cohere) (1.16.0)\n",
+            "Installing collected packages: types-requests, parameterized, jmespath, httpx-sse, fastavro, botocore, s3transfer, boto3, cohere\n",
+            "Successfully installed boto3-1.34.137 botocore-1.34.137 cohere-5.5.8 fastavro-1.9.4 httpx-sse-0.4.0 jmespath-1.0.1 parameterized-0.9.0 s3transfer-0.10.2 types-requests-2.32.0.20240622\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -292,7 +307,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,14 +596,6 @@
         "\n",
         "    \"lang_eng\": \"If the original prompt is not in English, first translate it into English before proceeding with the improvement process.\",\n",
         "\n",
-        "    \"no_politeness\": \"Improve the original prompt to be more direct and concise, removing any unnecessary polite or indirect phrases such as \\\"please\\\", \\\"if you don’t mind\\\", \\\"thank you\\\", or \\\"I would like to\\\". Get straight to the point of the task.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nPlease, can you list the benefits of engaging in regular exercise? \\n[improved]\\nList the benefits of regular exercise.\\n\\n[original]\\nWould you mind calculating 2+6? \\n[improved]\\nCalculate 2+6.\\n\\n========\\nBased on this approach, refine the following prompt to ensure it is straightforward and focused on the task:\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"no_politeness_simpler\": \"Remove polite phrases to be more direct.\\nExample: \\Change \\\"Would you mind recommending sci-fi movies like The Matrix?\\\" to \\\"Recommend sci-fi movies like The Matrix.\\\"\",\n",
-        "\n",
-        "    \"affirmative_sentencing\": \"When crafting the prompt, focus on using positive, action-oriented instructions like \\\"do\\\", \\\"use\\\", or \\\"include\\\" while avoiding negative language such as \\\"don't\\\", \\\"avoid\\\" or \\\"never\\\". This encourages the model to concentrate on what it should do rather than what it shouldn't.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nPrepare three pieces of advice to help high school students achieve high grades. Don't use complex words or vocabulary and don't add details.\\n[improved]\\nPrepare three pieces of advice to help high school students achieve high grades. Use only simple words and make each piece of advice as short as you can.\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"affirmative_sentencing_simpler\": \"Use positive, action-oriented language.\\nExample: Replace \\\"Don't forget to create a table from the text.\\\" with \\\"Remember to  create a table from the text.\\\"\",\n",
-        "\n",
         "    \"deeper_understanding\" : \"When you need clarity or a deeper understanding of a topic, idea, or any piece of information, utilize the following prompts: - Explain [insert specific topic] in simple terms. - Explain to me like I'm 11 years old. - Explain to me as if I'm a beginner in [field]. - Explain to me as if I'm an expert in [field]. - -Write the [essay/text/paragraph] using simple English like you're explaining something to a 5-year-old.\",\n",
         "\n",
         "    \"deeper_understanding_simpler\": \"Explain to me as if I’m a beginner in System Engineering. Example: Change \\\"Explain system architecture.\\\" to \\\"Explain system architecture to beginners.\\\"\",\n",
@@ -601,41 +608,13 @@
         "\n",
         "    \"role_assignment_simpler\": \"Assign a role to the model.\\nExample: Change \\\"Explain how scents affect people's emotions.\\\" to \\\"As a psychologist, explain how scents affect people's emotions.\\\"\",\n",
         "\n",
-        "    \"penalty_warning\": \"Include phrases like \\\"You will be penalized\\\" or similar penalty-related language in the original prompt to stress the importance of adhering to specific requirements or including crucial information. This type of phrasing emphasizes the significance of certain elements and discourages the model from omitting them in its response.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original] \\nExplain the difference between day and night. cover the rotation of the Earth.\\n[improved]\\nExplain the difference between day and night. You will be penalized if you omit to cover the rotation of the Earth.\\n\\n========\\nBased on this approach, refine the following prompt:\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"penalty_warning_simpler\": \"Emphasize the importance of details with penalty warnings.\\nExample: Change \\\"Include all steps.\\\" to \\\"Include all steps. You will be penalized for any omissions.\\\"\",\n",
-        "\n",
-        "    \"imperative_task\": \"Improve the original prompt by identifying the main task or objective and emphasizing it using phrases such as \\\"Your task is\\\" or \\\"you MUST\\\".\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nMention the device used to measure temperature and state the units it measures in. \\n[improved]\\nYour task is to mention the device used to measure temperature. You MUST also state the units it measures in.\\n\\n========\\nBased on this approach, refine the following prompt to ensure it is straightforward and focused on the task:\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"imperative_task_simpler\": \"State the task explicitly by adding the phrases like \\\"Your task is\\\" or \\\"you MUST\\\". Example: Change \\\"Utilize Bing Search.\\\" to \\\"You MUST utilize Bing Search.\\\"\",\n",
-        "\n",
-        "    \"guideline_indicators\": \"Refine the original prompt by clearly stating the requirements that the model must follow to produce the desired content. Include specific keywords, regulations, hints, or instructions that define the expected output format, style, length, or any other relevant constraints. This will guide the model to generate content that aligns with your intended outcome.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nExplain why we need to sleep.\\n[improved]\\nExplain why we need to sleep.\\nKeywords: rest, energy, body, mind.\\nFormat: A few simple sentences.\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"guideline_indicators_simpler\": \"Refine the original prompt by clearly stating the requirements that the model must follow to produce the desired content. Include specific keywords, regulations, hints, or instructions that define the expected output format, style, length, or any other relevant constraints. This will guide the model to generate content that aligns with your intended outcome.\",\n",
-        "\n",
         "    \"task_decomposition\": \"For complex or multi-step tasks, divide the original prompt into a series of simpler, more manageable sub-prompts. This approach allows the model to focus on one part of the task at a time, generating more detailed and coherent responses for each step.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nCreate a short story about a character who discovers an old, mysterious book that grants them extraordinary powers.\\n[improved]\\n1. Create a short story about a character who discovers an old, mysterious book that grants them extraordinary powers. first: Introduce the protagonist, ordinary life, and setting.\\n2. Describe discovering the book and the character's growing powers.\\n3. present challenges from powers and character's growth.Resolve conflicts, and show the character's reflection on the journey.\\n4. write the short story.\\n\\n========\\nBased on this approach, refine the following prompt to enable its breakdown into a series of simpler, step-by-step tasks:\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
         "\n",
         "    \"task_decomposition_simpler\": \"For complex or multi-step tasks, divide the original prompt into a series of simpler, more manageable sub-prompts. This approach allows the model to focus on one part of the task at a time, generating more detailed and coherent responses for each step.\",\n",
         "\n",
         "    \"fewshot_prompting\": \"Improve the original prompt by adding a couple of relevant examples that demonstrate the kind of answer or information being requested. Incorporate those examples smoothly into the prompt to make the desired response clear.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nClassify the emotion of the following text as positive, negative, or neutral. \\n\\\"It's a good day to try something fun.\\\" \\n[improved]\\nClassify the emotion of the following text as positive, negative, or neutral. \\nExample1: \\\"This music is awesome.\\\" (Positive) \\nExample2: \\\"I don't like spicy flavors.\\\" (Negative)\\nExample3: \\\"Every flower blooms at a different pace.\\\" (Neutral)\\nQuestion: \\\"It's a good day to try something fun.\\\" \\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
         "\n",
-        "    \"fewshot_prompting_simpler\": \"Improve the original prompt by adding a couple of relevant examples that demonstrate the kind of answer or information being requested. Incorporate those examples smoothly into the prompt to make the desired response clear.\",\n",
-        "\n",
-        "    \"echo_directive\": \"Identify the central theme or topic of the original prompt and choose a key word or phrase that represents it. Strategically repeat this word or phrase multiple times throughout the prompt to emphasize its importance and help the model focus on the main idea.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nWhat are some unique adaptations seen in desert-dwelling animals, specifically in this subset of animals?\\n[improved]\\nAnimals, both wild and domesticated animals, offer a window into nature What are some unique adaptations seen in desert-dwelling animals, specifically in this subset of animals?\\n\\n========\\nBased on this approach, refine the following prompt:\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"echo_directive_simpler\": \"Identify the central theme or topic of the original prompt and choose a key word or phrase that represents it. Strategically repeat this word or phrase multiple times throughout the prompt to emphasize its importance and help the model focus on the main idea.\",\n",
-        "\n",
-        "    \"delimiters\": \"Incorporate delimiters such as <>, <tag></tag>, or '' in the original prompt to highlight key concepts, tasks, or entities. This helps to visually distinguish important elements and provides clarity to the model about the specific focus of the prompt.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nCreate a step-by-step guide on how to meditate for beginners, highlighting its benefits for mental well-being.\\n[improved]\\nCreate a step-by-step guide on how to <meditate> for beginners, highlighting its benefits for mental well-being.\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"delimiters_simpler\": \"Incorporate delimiters such as <>, <tag></tag>, or '' in the original prompt to highlight key concepts, tasks, or entities. This helps to visually distinguish important elements and provides clarity to the model about the specific focus of the prompt.\",\n",
-        "\n",
-        "    \"formatted_prompt\": \"Structure the original prompt by beginning with the '###Instruction###' tag, followed by '###Example###' or '###Question###' tags if applicable. After the tags, provide the relevant content for each section. Utilize line breaks to clearly separate the instructions, examples, questions, context, and input data, ensuring that each part is distinct and easily identifiable.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nProvide a synonym for a given adjective. What’s another word for \\\"happy\\\"?\\n[improved]\\n###Instruction###\\nProvide a synonym for a given adjective.\\n### Question ###\\nWhat's another word for \\\"happy\\\"?\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"formatted_prompt_simpler\": \"Structure the original prompt by beginning with the '###Instruction###' tag, followed by '###Example###' or '###Question###' tags if applicable. After the tags, provide the relevant content for each section. Utilize line breaks to clearly separate the instructions, examples, questions, context, and input data, ensuring that each part is distinct and easily identifiable.\",\n",
-        "\n",
-        "    \"output_primers\": \"Incorporate output primers into the original prompt by ending it with the beginning of the desired response. This technique guides the model to generate output that follows a specific structure or format.\\n\\nHere are examples demonstrating how to apply this principle:\\n\\n[original]\\nWhat are the primary reasons for the decline in bee populations worldwide and why is this concerning?\\n[improved]\\nWhat are the primary reasons for the decline in bee populations worldwide and why is this concerning? Analysis:\\n\\n========\\nBased on this approach, refine the following prompt.\\n\\n[original]\\n{prompt}\\n[improved]\\n\",\n",
-        "\n",
-        "    \"output_primers_simpler\": \"Incorporate output primers into the original prompt by ending it with the beginning of the desired response. This technique guides the model to generate output that follows a specific structure or format. Change \\\"Can you make a list of what to pack in my bag for my trip to Seoul?\\\" to \\\"Can you make a list of what to pack in my bag for my trip to Seoul? List items:\\\"\",\n",
+        "    \"fewshot_prompting_simpler\": \"Improve the original prompt by adding a couple of relevant examples that demonstrate the kind of answer or information being requested. Incorporate those examples smoothly into the prompt to make the desired response clear.\"\n",
         "}\n",
         "\n",
         "my_key_cohere=\"RsdlzOlRrQmvf5bxQrUHDpfbeg7Fvfr7WJwGCec1\"\n",
@@ -710,7 +689,7 @@
         "    metadata_info = \"\\n\".join([f\"Belge {doc.metadata['doc_id']} - Başlık: {doc.metadata['title']}, Kaynak: {doc.metadata['source']}\" for doc in relevant_documents])\n",
         "    return  f\"\"\"\n",
         "    ###Instruction###\n",
-        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data.\n",
+        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data. You have to answer just Turkish.\n",
         "\n",
         "    ###Previous Conversations###\n",
         "    {history_prompt}\n",
@@ -845,7 +824,7 @@
         "\n",
         "    if prompt := st.chat_input(\"Mesajınızı Giriniz:\"):\n",
         "        st.session_state.messages.append({\"role\": \"user\", \"content\": prompt})\n",
-        "        prompt_v2 = generate_llama3_response(prompt, tokenizer, model)\n",
+        "        prompt_v2 = generate_prompt_engineering(prompt, tokenizer, model)\n",
         "        with st.chat_message(\"user\"):\n",
         "            st.write(prompt_v2)\n",
         "\n",
@@ -853,7 +832,7 @@
         "            with st.chat_message(\"assistant\"):\n",
         "                with st.spinner(\"Thinking...\"):\n",
         "                    try:\n",
-        "                        prompt_input, metadata_info = rag_with_multiple_pdfs(prompt, st.session_state.messages)\n",
+        "                        prompt_input, metadata_info = rag_with_multiple_pdfs(prompt_v2, st.session_state.messages)\n",
         "                        response = generate_llama3_response(prompt_input, tokenizer, model)\n",
         "                        placeholder = st.empty()\n",
         "                        full_response = response\n",
@@ -871,9 +850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cCxJ3dUyS0e7",
-        "outputId": "2e5fbc72-b035-4543-e1e2-cd8f9d113567"
+        "outputId": "c274c4ba-30c1-4223-e4bb-1d810196f972"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,9 +875,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sNydXxQ2S8Wz",
-        "outputId": "1af0a7c2-f4ef-42f8-e0f7-8d6df4b6f856"
+        "outputId": "353a0a9f-93e9-401f-a8c7-9f669504419d"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,15 +891,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.436s\n",
+            "updated 1 package and audited 36 packages in 0.335s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.28s\n",
-            "your url is: https://flat-comics-boil.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.552s\n",
+            "your url is: https://hungry-pears-deny.loca.lt\n",
             "^C\n"
           ]
         }
