--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpuzV+Uy4mAIOlTHnAJEX7",
+      "gpuType": "A100",
+      "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
+      "authorship_tag": "ABX9TyOCcbbZ+tepm7/NODw1PR7v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,11 +31,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "UnsYdyjOcduZ"
+        "id": "UnsYdyjOcduZ",
+        "outputId": "f4ecaae7-5899-4938-8dbd-e4ce5bd20cca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed accelerate-0.31.0 asgiref-3.8.1 backoff-2.2.1 bcrypt-4.1.3 bitsandbytes-0.43.1 chroma-0.2.0 chroma-hnswlib-0.7.3 chromadb-0.5.3 coloredlogs-15.0.1 dataclasses-json-0.6.7 deprecated-1.2.14 dnspython-2.6.1 email_validator-2.2.0 faiss-cpu-1.8.0.post1 faiss-gpu-1.7.2 fastapi-0.111.0 fastapi-cli-0.0.4 gitdb-4.0.11 gitpython-3.1.43 h11-0.14.0 httpcore-1.0.5 httptools-0.6.1 httpx-0.27.0 humanfriendly-10.0 importlib-metadata-7.1.0 jsonpatch-1.33 jsonpointer-3.0.0 kubernetes-30.1.0 langchain-0.2.6 langchain-core-0.2.10 langchain-text-splitters-0.2.2 langchain_chroma-0.1.2 langchain_community-0.2.6 langchain_experimental-0.0.62 langchain_openai-0.1.13 langsmith-0.1.83 marshmallow-3.21.3 mmh3-4.1.0 monotonic-1.6 mypy-extensions-1.0.0 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-8.9.2.26 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.5.82 nvidia-nvtx-cu12-12.1.105 onnxruntime-1.18.1 openai-1.35.8 opentelemetry-api-1.25.0 opentelemetry-exporter-otlp-proto-common-1.25.0 opentelemetry-exporter-otlp-proto-grpc-1.25.0 opentelemetry-instrumentation-0.46b0 opentelemetry-instrumentation-asgi-0.46b0 opentelemetry-instrumentation-fastapi-0.46b0 opentelemetry-proto-1.25.0 opentelemetry-sdk-1.25.0 opentelemetry-semantic-conventions-0.46b0 opentelemetry-util-http-0.46b0 orjson-3.10.5 overrides-7.7.0 posthog-3.5.0 pydeck-0.9.1 pypdf-4.2.0 pypika-0.48.9 python-dotenv-1.0.1 python-multipart-0.0.9 smmap-5.0.1 starlette-0.37.2 streamlit-1.36.0 tiktoken-0.7.0 typing-inspect-0.9.0 ujson-5.10.0 uvicorn-0.30.1 uvloop-0.19.0 watchdog-4.0.1 watchfiles-0.22.0 websockets-12.0\n"
+          ]
+        }
+      ],
       "source": [
         "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental"
       ]
@@ -69,6 +84,36 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from huggingface_hub import login\n",
+        "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "login(token = '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')"
+      ],
+      "metadata": {
+        "id": "wgXZaAtAO7Ms",
+        "outputId": "f03b1e2f-6809-4ba1-a8bd-0873038e06a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -377,10 +422,22 @@
         "    main()\n"
       ],
       "metadata": {
-        "id": "WqXLxhi5c3Aa"
+        "id": "WqXLxhi5c3Aa",
+        "outputId": "767b23fa-770d-4c83-bf3f-a1c7135eed88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing app_v7.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -390,10 +447,41 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "dDg1_K4Jc_a0"
+        "id": "dDg1_K4Jc_a0",
+        "outputId": "fcc94927-d56b-4eda-ac86-77758af77722",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.341s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.308s\n",
+            "your url is: https://light-pandas-rescue.loca.lt\n"
+          ]
+        }
+      ]
     }
   ]
 }
