--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyOD/Eyp7sKD9bi6g+GHw5/F",
+      "authorship_tag": "ABX9TyPglZOjTx+mnoh3LsZZajmF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
       ],
       "metadata": {
         "id": "bhrD34qcc-VU",
-        "outputId": "52a7bc58-835b-452e-c78e-746602155763",
+        "outputId": "4f35bdc3-f682-46c7-b1b4-fb4d13ba5bcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -100,7 +100,7 @@
       ],
       "metadata": {
         "id": "wgXZaAtAO7Ms",
-        "outputId": "af9d4d1d-57b2-4824-aade-a24793994e8b",
+        "outputId": "02b3fdbd-f82c-4c1f-9c93-dbff3b7b5fea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -428,12 +428,12 @@
       ],
       "metadata": {
         "id": "WqXLxhi5c3Aa",
-        "outputId": "c150e91e-eedb-4a62-83ad-d1a34176f1d4",
+        "outputId": "5af11662-fcc3-4e6d-a1f1-20a8327d17e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,37 +453,36 @@
       ],
       "metadata": {
         "id": "dDg1_K4Jc_a0",
-        "outputId": "c0cda073-b1a5-48f7-d0dd-fd3e796b6001",
+        "outputId": "d65993c8-b93b-4d50-c944-a20b26faa74a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.492s\n",
+            "+ localtunnel@2.0.2\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 2.637s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
-            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.664s\n",
-            "your url is: https://wild-spiders-unite.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.119s\n",
+            "your url is: https://ninety-chicken-live.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
@@ -757,8 +756,7 @@
         "    with col_left:\n",
         "        st.empty()\n",
         "    with col_input:\n",
-        "        prompt = st.text_input(\"Mesajınızı Giriniz:\", key=\"user_input\")\n",
-        "        st.divider()\n",
+        "        st.empty()\n",
         "    with col_right:\n",
         "        st.empty()\n",
         "\n",
@@ -816,12 +814,12 @@
       ],
       "metadata": {
         "id": "T-0q7mqCMAeD",
-        "outputId": "10013d58-47cc-4a1f-9ce4-24d10443e250",
+        "outputId": "e6bca84f-e8d7-41d6-81a0-3b3bd4cc794d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,12 +839,12 @@
       ],
       "metadata": {
         "id": "BE1_LVY3MHNc",
-        "outputId": "01373c94-4574-4999-9093-0e1783c00adf",
+        "outputId": "5e72e7a3-9d7e-45ef-8d63-8e93cc50f495",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,16 +858,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.445s\n",
+            "updated 1 package and audited 36 packages in 0.472s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.066s\n",
-            "your url is: https://fancy-moose-search.loca.lt\n",
-            "^C\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.712s\n",
+            "your url is: https://sweet-humans-arrive.loca.lt\n"
           ]
         }
       ]
