--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
+      "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyN0stAVglhMDKQ9k5pYCguo",
+      "authorship_tag": "ABX9TyOVdTJARMia7NX+dQGEw6Sm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,26 +68,10 @@
         "pip install rank_bm25"
       ],
       "metadata": {
-        "id": "bhrD34qcc-VU",
-        "outputId": "69d92a0f-c0a2-4b45-f8ce-01237bab10a2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bhrD34qcc-VU"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting rank_bm25\n",
-            "  Downloading rank_bm25-0.2.2-py3-none-any.whl (8.6 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from rank_bm25) (1.25.2)\n",
-            "Installing collected packages: rank_bm25\n",
-            "Successfully installed rank_bm25-0.2.2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -603,7 +587,7 @@
         "def get_relevant_documents_with_bm25(documents, query):\n",
         "\n",
         "    bm25_retriever = BM25Retriever.from_documents(documents=documents)\n",
-        "    bm25_retriever.k = 4\n",
+        "    bm25_retriever.k = 2\n",
         "\n",
         "    bm25_relevant_documents = bm25_retriever.get_relevant_documents(query=query)\n",
         "\n",
@@ -777,9 +761,9 @@
         "                        final_prompt, metadata_info, st.session_state.chroma_relevant_documents, st.session_state.bm25_documents, st.session_state.hybrid_search_documents = rag_with_multiple_pdfs(st.session_state.optimized_prompt, st.session_state.messages)\n",
         "                        response = generate_llama3_response(final_prompt, tokenizer, model)\n",
         "                        placeholder = st.empty()\n",
-        "                        full_response = response\n",
+        "                        full_response = response + \"\\n\\nMetadata Bilgileri:\\n\" + metadata_info\n",
         "                        placeholder.markdown(full_response)\n",
-        "                        message = {\"role\": \"assistant\", \"content\": f\"{full_response}\\n\\nMetadata Bilgileri:\\n{metadata_info}\"}\n",
+        "                        message = {\"role\": \"assistant\", \"content\": response}\n",
         "                        st.session_state.messages.append(message)\n",
         "                    except Exception as e:\n",
         "                        st.error(f\"An error occurred: {e}\")\n",
@@ -837,15 +821,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "331f6878-2851-4f14-f0a0-99efb77862b9"
+        "outputId": "e1cf0bc9-029f-4ed2-cd17-6f96c74797cf"
       },
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing app_v9.py\n"
+            "Overwriting app_v9.py\n"
           ]
         }
       ]
@@ -858,10 +842,39 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "FS_jqNDOdunC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FS_jqNDOdunC",
+        "outputId": "d538ee65-a355-4cb9-be62-de833fbcd624"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.496s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.502s\n",
+            "your url is: https://busy-banks-begin.loca.lt\n",
+            "^C\n"
+          ]
+        }
+      ]
     }
   ]
 }
