--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyOVdTJARMia7NX+dQGEw6Sm",
+      "authorship_tag": "ABX9TyOHfkv2SF/jtbuwu+qwAg4B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -493,8 +493,6 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
         "templates = {\n",
         "    \"system\": \"You are a professional prompt engineer. Apply the mentioned prompt engineering technique and provide ONLY the improved prompt without any additional commentary or explanations.\",\n",
         "\n",
@@ -587,7 +585,7 @@
         "def get_relevant_documents_with_bm25(documents, query):\n",
         "\n",
         "    bm25_retriever = BM25Retriever.from_documents(documents=documents)\n",
-        "    bm25_retriever.k = 2\n",
+        "    bm25_retriever.k = 4\n",
         "\n",
         "    bm25_relevant_documents = bm25_retriever.get_relevant_documents(query=query)\n",
         "\n",
@@ -610,7 +608,7 @@
         "    metadata_info = \"\\n\".join([f\"Belge {doc.metadata['doc_id']} - Başlık: {doc.metadata['title']}, Kaynak: {doc.metadata['source']}\" for doc in relevant_documents])\n",
         "    return  f\"\"\"\n",
         "    ###Instruction###\n",
-        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data. You have to answer just TURKISH!\n",
+        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data. Ensure that your answers are free from any repetitive or duplicate content. You have to answer just in TURKISH!\n",
         "\n",
         "    ###Previous Conversations###\n",
         "    {history_prompt}\n",
@@ -706,6 +704,7 @@
         "    SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers.\n",
         "    Your role is crucial in providing clear, concise, and expert-level information in Turkish.\n",
         "    Utilize the provided documents and historical conversation data to deliver insightful answers.\n",
+        "    Ensure that your answers are free from any repetitive or duplicate content.\n",
         "    If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
         "    Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
         "    You have to just answer TURKISH!\"\"\"\n",
@@ -729,8 +728,6 @@
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
         "    return tokenizer.decode(response, skip_special_tokens=True)\n",
-        "\n",
-        "\n",
         "\n",
         "# Main Function\n",
         "def main():\n",
@@ -813,7 +810,6 @@
         "\n",
         "selected_page = st.sidebar.selectbox(\"Sayfa seçin\", page_names_to_funcs.keys())\n",
         "page_names_to_funcs[selected_page]()\n",
-        "\n",
         "\n"
       ],
       "metadata": {
@@ -821,7 +817,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "e1cf0bc9-029f-4ed2-cd17-6f96c74797cf"
+        "outputId": "445fa826-0b7b-4ebd-cfef-76bdc95f91b0"
       },
       "execution_count": 9,
       "outputs": [
@@ -846,9 +842,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS_jqNDOdunC",
-        "outputId": "d538ee65-a355-4cb9-be62-de833fbcd624"
+        "outputId": "f4b64f7f-4026-4141-9108-73cd935afa3d"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -862,15 +858,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.496s\n",
+            "updated 1 package and audited 36 packages in 0.384s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.502s\n",
-            "your url is: https://busy-banks-begin.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.597s\n",
+            "your url is: https://huge-keys-like.loca.lt\n",
             "^C\n"
           ]
         }
