--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyOHfkv2SF/jtbuwu+qwAg4B",
+      "authorship_tag": "ABX9TyPEdpEzoMwM/ETU0ZbzQNI5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,10 +68,26 @@
         "pip install rank_bm25"
       ],
       "metadata": {
-        "id": "bhrD34qcc-VU"
+        "id": "bhrD34qcc-VU",
+        "outputId": "e623d006-2296-497f-c08e-900c6ee626f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting rank_bm25\n",
+            "  Downloading rank_bm25-0.2.2-py3-none-any.whl (8.6 kB)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from rank_bm25) (1.25.2)\n",
+            "Installing collected packages: rank_bm25\n",
+            "Successfully installed rank_bm25-0.2.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -83,10 +99,25 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "wgXZaAtAO7Ms"
+        "id": "wgXZaAtAO7Ms",
+        "outputId": "4aff3ed0-73e1-424e-b0b3-2806b874f9c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -438,18 +469,18 @@
       ],
       "metadata": {
         "id": "WqXLxhi5c3Aa",
-        "outputId": "ea567ced-702d-43ae-da96-37af3163f970",
+        "outputId": "d8351f4f-9a55-43af-cdf0-24511ab04278",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app_v8.py\n"
+            "Writing app_v8.py\n"
           ]
         }
       ]
@@ -462,10 +493,39 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "BE1_LVY3MHNc"
+        "id": "BE1_LVY3MHNc",
+        "outputId": "8acd65c4-c638-4292-d524-dad139d9bd24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 1.133s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.324s\n",
+            "your url is: https://ready-rabbits-reply.loca.lt\n",
+            "^C\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -524,10 +584,13 @@
         "DATA_PATH = \"/content/drive/MyDrive/data\"  # PDF dosyalarının bulunduğu dizin\n",
         "CHROMA_PATH = \"chroma\"  # Chroma veritabanının saklanacağı dizin\n",
         "\n",
+        "from langchain_community.embeddings import HuggingFaceInferenceAPIEmbeddings\n",
         "# Initialize Embeddings\n",
         "def initialize_embeddings():\n",
-        "    embeddings = CohereEmbeddings(cohere_api_key=my_key_cohere, model=\"embed-multilingual-v3.0\")\n",
-        "    return embeddings\n",
+        "    return HuggingFaceInferenceAPIEmbeddings(\n",
+        "        api_key='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',\n",
+        "        model_name=\"sentence-transformers/all-MiniLM-l6-v2\"\n",
+        "    )\n",
         "\n",
         "embeddings = initialize_embeddings()\n",
         "\n",
@@ -690,8 +753,8 @@
         "        max_new_tokens=1024,\n",
         "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
-        "        temperature=0.2,\n",
-        "        top_p=0.9,\n",
+        "        temperature=0.5,\n",
+        "        top_p=1,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -722,8 +785,8 @@
         "        max_new_tokens=1024,\n",
         "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
-        "        temperature=0.2,\n",
-        "        top_p=0.9,\n",
+        "        temperature=0.5,\n",
+        "        top_p=1,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -817,9 +880,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "445fa826-0b7b-4ebd-cfef-76bdc95f91b0"
+        "outputId": "6a85349b-618b-4f3e-a509-0e444add6cc1"
       },
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,9 +905,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS_jqNDOdunC",
-        "outputId": "63006738-c019-45a3-cf34-09f15287f8a0"
+        "outputId": "d42509d1-022c-4896-d77b-bfe0a03c7122"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,16 +920,17 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.381s\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.472s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.536s\n",
-            "your url is: https://nine-donuts-shout.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.475s\n",
+            "your url is: https://vast-ends-brake.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
