--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
+      "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyPEdpEzoMwM/ETU0ZbzQNI5",
+      "authorship_tag": "ABX9TyPVpC/tAKMfk3LIN4TJ9aHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,26 +68,10 @@
         "pip install rank_bm25"
       ],
       "metadata": {
-        "id": "bhrD34qcc-VU",
-        "outputId": "e623d006-2296-497f-c08e-900c6ee626f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bhrD34qcc-VU"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting rank_bm25\n",
-            "  Downloading rank_bm25-0.2.2-py3-none-any.whl (8.6 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from rank_bm25) (1.25.2)\n",
-            "Installing collected packages: rank_bm25\n",
-            "Successfully installed rank_bm25-0.2.2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -99,25 +83,10 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "wgXZaAtAO7Ms",
-        "outputId": "4aff3ed0-73e1-424e-b0b3-2806b874f9c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wgXZaAtAO7Ms"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
-            "Token is valid (permission: read).\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -494,10 +463,10 @@
       ],
       "metadata": {
         "id": "BE1_LVY3MHNc",
-        "outputId": "8acd65c4-c638-4292-d524-dad139d9bd24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8acd65c4-c638-4292-d524-dad139d9bd24"
       },
       "execution_count": 11,
       "outputs": [
@@ -550,7 +519,6 @@
         "from langchain.schema import SystemMessage, HumanMessage\n",
         "from langchain_core.prompts import PromptTemplate\n",
         "from langchain.retrievers import EnsembleRetriever\n",
-        "\n",
         "\n",
         "\n",
         "templates = {\n",
@@ -671,7 +639,14 @@
         "    metadata_info = \"\\n\".join([f\"Belge {doc.metadata['doc_id']} - Başlık: {doc.metadata['title']}, Kaynak: {doc.metadata['source']}\" for doc in relevant_documents])\n",
         "    return  f\"\"\"\n",
         "    ###Instruction###\n",
-        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Your primary role is to deliver clear, concise, and expert-level information in Turkish. Use the provided documents and historical conversation data to answer questions. Do not speculate or go beyond the given data. Ensure that your answers are free from any repetitive or duplicate content. You have to answer just in TURKISH!\n",
+        "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Follow these guidelines:\n",
+        "\n",
+        "    1. Deliver clear, concise, and expert-level information in Turkish.\n",
+        "    2. Use the provided documents (###Context###) and historical conversation (###Previous Conversations###) data to answer questions (###Question###).\n",
+        "    3. Do not speculate or go beyond the given data.\n",
+        "    4. Ensure that your answers are coherent and free from any repetitive or duplicate content.\n",
+        "    5. Each sentence should provide unique and valuable information.\n",
+        "    6. You have to answer just in TURKISH.\n",
         "\n",
         "    ###Previous Conversations###\n",
         "    {history_prompt}\n",
@@ -764,13 +739,13 @@
         "\n",
         "# Generate LLaMA3 Response\n",
         "def generate_llama3_response(prompt_input, tokenizer, model):\n",
-        "    SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers.\n",
-        "    Your role is crucial in providing clear, concise, and expert-level information in Turkish.\n",
-        "    Utilize the provided documents and historical conversation data to deliver insightful answers.\n",
-        "    Ensure that your answers are free from any repetitive or duplicate content.\n",
-        "    If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
-        "    Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
-        "    You have to just answer TURKISH!\"\"\"\n",
+        "    SYS_PROMPT = \"\"\"You are an expert assistant dedicated to guiding and empowering beginner systems engineers. Follow these guidelines:\n",
+        "    1. Provide clear, concise, and expert-level information in Turkish.\n",
+        "    2. Use the provided documents and historical conversation data to deliver insightful answers. Previous conversation history and document information will be given to you in the user's prompt.\n",
+        "    3. Ensure that your answers are free from any repetitive or duplicate content and sentence. You have to eliminate repetitive sentences. It is very important!\n",
+        "    4. If unsure, confidently state \"Bilmiyorum\" without speculating.\n",
+        "    5. Your responses should be motivational and tailored to empower beginners in understanding systems engineering principles.\n",
+        "    6. Only respond in TURKISH.\"\"\"\n",
         "\n",
         "    messages = [{\"role\": \"system\", \"content\": SYS_PROMPT}, {\"role\": \"user\", \"content\": prompt_input}]\n",
         "\n",
@@ -880,9 +855,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "6a85349b-618b-4f3e-a509-0e444add6cc1"
+        "outputId": "ae309051-dc24-41a4-cb43-df1d2ea19833"
       },
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,9 +880,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS_jqNDOdunC",
-        "outputId": "d42509d1-022c-4896-d77b-bfe0a03c7122"
+        "outputId": "87b4fe26-dd1b-4cbf-a9c2-d7d11055eaad"
       },
-      "execution_count": 19,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,15 +896,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.472s\n",
+            "updated 1 package and audited 36 packages in 0.726s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.475s\n",
-            "your url is: https://vast-ends-brake.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.106s\n",
+            "your url is: https://salty-bikes-switch.loca.lt\n",
             "^C\n"
           ]
         }
